cabal-version:      3.0
name:               jrpc-wai
version:            0.1.0.0
license:            MIT
author:             Yan Shkurinsky
maintainer:         yan.shkurinsky@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JRPC.Wai
    other-modules:    JRPC.Wai.Internal
    build-depends:    base ^>=4.16.4.0, wai, bytestring, aeson, http-types
    hs-source-dirs:   src
    default-language: Haskell2010
